--- a/lab2-221220113/lab2/bootloader/Makefile
+++ b/lab2-221220113/lab2/bootloader/Makefile
@@ -17,10 +17,10 @@
 
 CC = gcc
 LD = ld
-
+#-fno-asynchronous-unwind-tables 
 CFLAGS = -m32 -march=i386 -static \
 	 -fno-builtin -fno-stack-protector -fno-omit-frame-pointer \
-	 -Wall -Werror -Os -g -fno-asynchronous-unwind-tables 
+	 -Wall -Werror -O2 -g
 ASFLAGS = -m32
 LDFLAGS = -m elf_i386
 
